Fixes services page spacing

--- a/src/App.css
+++ b/src/App.css
@@ -30,12 +30,13 @@
 
 .company-desc-div {
   display: flex;
-  padding: 2em; 
-  /* margin-left: 10em;
-  margin-right: 10em; */
+  padding-left: 2em; 
+  padding-right: 2em; 
   justify-content: space-around;
+  margin-top: 5rem;
 }
 .company-description {
+  margin: 0%;
 }
 
 .top-line {
@@ -149,7 +150,7 @@ header h1 a:hover {
   display: flex;
   flex-direction: column;
   margin-bottom: 5rem;
-  /* margin-top: 5rem; */
+  margin-top: 5rem;
   background: ghostwhite;
   padding: 2rem;
   border-radius: 10px;
